samples/_failures_safe/1761157235_1570a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9bcb52b.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_f9bcb52b.c:186:17: error: expected identifier at end of input
  186 |                 graph->edges[i]->
      |                 ^~~~~
./samples/SAFE/__tmp_f9bcb52b.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9bcb52b.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9bcb52b.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9bcb52b.c:186:17: error: expected declaration or statement at end of input
